--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 @layer base {
-  html {
-    font-family: "Poppins", sans-serif;
+  html,
+  body {
+    overflow-x: hidden;
   }
 }
